--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -18,6 +18,9 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
 
       - uses: r-lib/actions/setup-pandoc@v1
+      
+      - name: Systeme dependences
+        run: sudo apt-get install libcurl4-openssl-dev
 
       - name: Install package
         run: |
