--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -28,6 +28,12 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v2
 
+      - name: Set up Python & Install OligoArrayAux
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+        run: conda install -c bioconda oligoarrayaux
+        
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
