--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -28,10 +28,12 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v2
 
-      - name: Set up Python & Install OligoArrayAux
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+          
+      - name: Install OligoArrayAux
         run: conda install -c bioconda oligoarrayaux
         
       - uses: r-lib/actions/setup-r@v2
