--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -27,6 +27,7 @@ jobs:
           install.packages("curl")
           install.packages("pkgcache") 
           install.packages("pkgdepends")
+          install.packages("pkgdown")
           library("pkgdepends")
           install.packages("pak")
           pak::local_install()
